<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Basic Twitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_photos">Flickr Photos</string>
    <string name="login_label">Connect to Twitter</string>
    <string name="title_activity_timeline">Home</string>
    <string name="foo_label">\@foo</string>
    <string name="tweet_body">This is the tweet body</string>
    <string name="relative_created">5m</string>
    <string name="foo_user_name">Dan Dosch</string>
    <string name="profile_image">Profile Image</string>
    <string name="number_placeholder">13</string>
    <string name="cd_retweets">Retweets</string>
    <string name="cd_stars">Stars</string>
    <string name="cd_reply">Reply</string>
    <string name="mi_compose">Compose</string>
    <string name="mi_tweet">Tweet</string>
    <string name="mi_profile">Profile</string>
    <string name="mi_remaining">140</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

</resources>