<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile_image"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBody"
        android:layout_alignParentTop="true"
        android:paddingTop="6dp"
        android:paddingLeft="6dp"
        android:text="@string/foo_user_name"
        android:textStyle="bold" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="2dp"
	    android:layout_alignParentTop="true"
	    android:layout_alignParentRight="true"
	    android:layout_alignBottom="@+id/tvScreenName"
	    android:layout_toRightOf="@+id/tvScreenName"
        android:weightSum="1.0" 
        android:id="@+id/relativeLayout">
        
        <TextView
	        android:id="@+id/tvUserName"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:paddingTop="6dp"
	        android:paddingLeft="6dp"
	        android:textSize="12sp"
	        android:fontFamily="sans-serif-thin"
	        android:text="@string/foo_label"
	        android:layout_weight="0.7" />
        
        <TextView
	        android:id="@+id/tvRelativeCreated"
	        android:layout_width="0dip"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:paddingTop="6dp"
	        android:paddingRight="6dp"
	        android:textSize="12sp"
	        android:fontFamily="sans-serif-thin"
	        android:text="@string/relative_created"
	        android:layout_weight="0.3" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvScreenName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:paddingBottom="3dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="3dp"
        android:autoLink="web"
        android:textSize="14sp"
        android:textColor="#777777"
        android:fontFamily="sans-serif"
        android:text="@string/tweet_body" />

    <ImageView
        android:id="@+id/ivReply"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/tvBody"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/cd_reply"
        android:src="@drawable/ic_reply" />
    
    <ImageView
        android:id="@+id/ivRetweet"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/cd_retweets"
        android:src="@drawable/ic_retweet" />

    <TextView
        android:id="@+id/tvRetweets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ivRetweet"
        android:paddingLeft="3dp"
        android:textSize="12sp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/number_placeholder" />

    <ImageView
        android:id="@+id/ivStar"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/tvStars"
        android:contentDescription="@string/cd_stars"
        android:src="@drawable/ic_star" />

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvBody"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="3dp"
        android:paddingRight="40dp"
        android:textSize="12sp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/number_placeholder" />

</RelativeLayout>
